fix(switch-button): align svg inside toggle button

--- a/packages/ui-components/src/components/switch-button/switch-button.scss
+++ b/packages/ui-components/src/components/switch-button/switch-button.scss
@@ -76,6 +76,7 @@ $icon-sizes: (
 }
 
 .switch-button {
+	display: flex;
 	box-sizing: border-box;
 
 	cursor: pointer;
